fix: improvements from code review